$Id: History,v 1.38 2002-05-15 05:47:48 asaim Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

May 15 2002, M.Asai (event-V04-00-02)
- Introducing new G4TrajectoryContainer class which aggregates STL vector,
  instead of deriving from STL vector.

Feb 26 2002, G.Cosmo (event-V04-00-01)
- Optimised implementation of SetNewValue() in G4ParticleGunMessenger and
  G4GeneralParticleSourceMessenger to allow porting on WIN32-VC for optimised
  compilation.

Jan 22 2002, M.Asai (event-V04-00-00)
- Remove the check G4PrimaryTransformer whether the primary vertex is inside
  the world volume. The check has been moved to G4SteppingManager.

Nov 21 2001, M.Asai (event-V03-02-09)
- G4PrimaryTransformer.cc: now considering case where a primary is placed on the
  boundary of the world volume. Added units.

Nov 20 2001, M.Asai (event-V03-02-08)
- Add check whether the primary vertex is inside of thw world volume.
- Move set method of position and time from G4ParticleGun to G4VPrimaryGenerator
  so that G4HEPEvtInterface can accept the primary vertex position

Nov 10 2001, M.Asai (event-V03-02-07)
- Tagged.

Oct 19 2001, F. Lei
- Code changes to remove compilation warnings un gcc-2.95.2