@@ -1,4 +1,4 @@
-$Id: History,v 1.38 2002-05-15 05:47:48 asaim Exp $
+$Id: History,v 1.39 2002-05-29 22:51:43 asaim Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+May 29 2002, M.Asai (event-V04-00-03)
+- Added TransferOneStackedTrack() method to G4StackManager.
 
 May 15 2002, M.Asai (event-V04-00-02)
 - Introducing new G4TrajectoryContainer class which aggregates STL vector,
